--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".listroom"></activity>
+        <activity android:name=".popupchat"></activity>
+        <activity android:name=".listroom" />
         <activity
             android:name=".detailtrip"
             android:label="@string/title_activity_detailtrip"
